--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,26 @@
     <string name="open_url">Open URL</string>
     <string name="out">Out</string>
     <string name="url">URL</string>
+    <string name="qeul_est_voutre_poids_actul_kg">Qeul est voutre poids actul (kg)?</string>
+    <string name="quelle_est_voutre_taille_actuelle_m_tres">Quelle est voutre taille actuelle (Métres)</string>
+    <string name="voutre">Votre IMC est :</string>
+
+    <string name="task_name">Nom de la tâche </string>
+    <string name="task_prio">Priority</string>
+    <string name="task_state">Status</string>
+    <string name="task_deadline">Deadline</string>
+    <string name="bout_add_task">Add</string>
+    <string name="bout_view_task">Show</string>
+    <string name="bout_delete_task">Delete</string>
+    <string-array name="priorite">
+        <item> Faible </item>
+        <item> Moyenne </item>
+        <item> Elevée </item>
+    </string-array>
+    <string-array name="etat">
+        <item> Not yet </item>
+        <item> Partially done </item>
+        <item> Done </item>
+    </string-array>
+
 </resources>
